src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@out2-wfsAN-spA1.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-2\nwant fullscreen: AN\nset parent: A1"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 500 × 1028, bounds: 1868 × 1028, states: []

post-map configures:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
